fix(backend): 稳定平台接口并修复核心前端流程